--- a/Tefas_Exercise_1.ipynb
+++ b/Tefas_Exercise_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMMfkPyFyhnvROHOhM8ckeq",
+      "authorship_tag": "ABX9TyPQBrkE+GUlXYCa4TarR/9g",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -381,7 +381,7 @@
         "\n",
         "def main():\n",
         "\n",
-        "    minimize_samples = False\n",
+        "    minimize_samples = True\n",
         "\n",
         "    # Load data from CIFAR10\n",
         "    (x_train, y_train), (x_test, y_test) = DataHelper.load_cifar10_data()\n",
@@ -392,8 +392,8 @@
         "        # Minimize samples\n",
         "        min_x_train, min_x_test, min_y_train, min_y_test = DataHelper.minimize_samples(\n",
         "            x_train, x_test, y_train, y_test,\n",
-        "            max_train_samples=2000,\n",
-        "            max_test_samples=900\n",
+        "            max_train_samples=7000,\n",
+        "            max_test_samples=3000\n",
         "        )\n",
         "\n",
         "        desired_x_train, desired_x_test, desired_y_train, desired_y_test = min_x_train, min_x_test, min_y_train, min_y_test\n",
