--- a/Exercise_six_(6).ipynb
+++ b/Exercise_six_(6).ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPYmVFiEg/hCVcXtYN8LQh+",
+      "authorship_tag": "ABX9TyNNFOwno54m17ZX7aUZxCux",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -94,7 +94,7 @@
       "metadata": {
         "id": "hJuIimKHayqf"
       },
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -195,9 +195,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RlPLOCIsaIa1",
-        "outputId": "0556757e-97e3-44e5-86cf-b96658cd269f"
+        "outputId": "c0853c20-7da6-4e7b-faef-18abcea3786c"
       },
-      "execution_count": 5,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -205,7 +205,7 @@
           "text": [
             "\n",
             "Variables dropped: ['id', 'member_id', 'Row ID', 'Unnamed: 50', 'annual_inc_joint', 'dti_joint', '36months', '60months', 'next_pymnt_d', 'mths_since_last_major_derog', 'title', 'grade', 'funded_amnt']\n",
-            "Cleaned DataFrame dimensions: (212999, 40)\n"
+            "Cleaned DataFrame dimensions: (3674, 40)\n"
           ]
         }
       ]
@@ -252,9 +252,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SFtg6470bjf_",
-        "outputId": "c84962a2-d5a9-4472-e8a4-322f0b37d6c4"
+        "outputId": "e0a4f716-f923-4632-9152-74ea1a848f50"
       },
-      "execution_count": 6,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -298,21 +298,21 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jNGBwlE1gdRD",
-        "outputId": "079daf52-807a-4648-ed66-f1154c45859e"
+        "outputId": "abe82a12-ad5e-46f3-c462-06b8c9959646"
       },
-      "execution_count": 7,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Target Counts:\n",
-            "0    151709\n",
-            "1     61290\n",
+            "0    3206\n",
+            "1     468\n",
             "\n",
             "Target Percentages:\n",
-            "0    71.23 %\n",
-            "1    28.77 %\n",
+            "0    87.26 %\n",
+            "1    12.74 %\n",
             "\n"
           ]
         }
@@ -352,7 +352,7 @@
         "df_cleaned['loan_range'] = pd.cut(df_cleaned['loan_amnt'], loan_amount_ranges)\n",
         "\n",
         "# Calculate approval rate per loan amount range\n",
-        "approval_rate = df_cleaned.groupby('loan_range')['target_loan_risk'].mean()\n",
+        "approval_rate = df_cleaned.groupby('loan_range', observed=True)['target_loan_risk'].mean()\n",
         "\n",
         "# Filter only the intervals where the approval probability\n",
         "# is at least 0.15 (15%).\n",
@@ -366,9 +366,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NiCaMPTOC8-N",
-        "outputId": "fb62132e-2116-4a2a-c024-71bf3ccf3799"
+        "outputId": "254bd4a6-a494-4a60-b12a-13cc14a3d468"
       },
-      "execution_count": 8,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -377,31 +377,12 @@
             "Desired amount ranges:\n",
             "\n",
             "loan_range\n",
-            "(1000, 3000]      0.182740\n",
-            "(3000, 5000]      0.283272\n",
-            "(5000, 7000]      0.347792\n",
-            "(7000, 9000]      0.349951\n",
-            "(9000, 11000]     0.334011\n",
-            "(11000, 13000]    0.294425\n",
-            "(13000, 15000]    0.296526\n",
-            "(15000, 17000]    0.270516\n",
-            "(17000, 19000]    0.262080\n",
-            "(19000, 21000]    0.287494\n",
-            "(21000, 23000]    0.217605\n",
-            "(23000, 25000]    0.322029\n",
-            "(25000, 27000]    0.241466\n",
-            "(27000, 29000]    0.395797\n",
-            "(29000, 31000]    0.173149\n",
+            "(5000, 7000]      0.170213\n",
+            "(7000, 9000]      0.162712\n",
+            "(9000, 11000]     0.155718\n",
+            "(19000, 21000]    0.151057\n",
             "Name: target_loan_risk, dtype: float64\n",
             "\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/tmp/ipython-input-3636721772.py:14: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
-            "  approval_rate = df_cleaned.groupby('loan_range')['target_loan_risk'].mean()\n"
           ]
         }
       ]
@@ -509,15 +490,20 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "C8Wsh-QkEZK0",
-        "outputId": "d93adaf2-6020-4eac-c311-f693aa955776"
+        "outputId": "1667960b-355e-49cd-e005-980462bb24f3"
       },
-      "execution_count": 9,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Fitting 3 folds for each of 2 candidates, totalling 6 fits\n"
+            "Fitting 3 folds for each of 2 candidates, totalling 6 fits\n",
+            "Best params: {'clf__n_estimators': 50}\n",
+            "Accuracy :  0.937\n",
+            "Precision:  1.0\n",
+            "Recall   :  0.504\n",
+            "F1-score :  0.67\n"
           ]
         },
         {
@@ -526,17 +512,6 @@
           "text": [
             "/usr/local/lib/python3.12/dist-packages/sklearn/preprocessing/_encoders.py:246: UserWarning: Found unknown categories in columns [1, 8] during transform. These unknown categories will be encoded as all zeros\n",
             "  warnings.warn(\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Best params: {'clf__n_estimators': 100}\n",
-            "Accuracy :  0.995\n",
-            "Precision:  1.0\n",
-            "Recall   :  0.984\n",
-            "F1-score :  0.992\n"
           ]
         }
       ]
