--- a/Exercise_six_(6).ipynb
+++ b/Exercise_six_(6).ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNNFOwno54m17ZX7aUZxCux",
+      "authorship_tag": "ABX9TyNi7FKX6AdGvvSIOAAjYy8j",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -54,6 +54,7 @@
       "source": [
         "import pandas as pd\n",
         "import numpy as np\n",
+        "import warnings\n",
         "from sklearn.ensemble import RandomForestClassifier\n",
         "from ydata_profiling import ProfileReport\n",
         "from sklearn.model_selection import train_test_split, GridSearchCV\n",
@@ -62,12 +63,17 @@
         "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
         "from sklearn.compose import ColumnTransformer\n",
         "from sklearn.impute import SimpleImputer\n",
-        "from sklearn.pipeline import Pipeline"
+        "from sklearn.pipeline import Pipeline\n",
+        "\n",
+        "warnings.filterwarnings(\n",
+        "    \"ignore\",\n",
+        "    message=\"Found unknown categories in columns\",\n",
+        ")"
       ],
       "metadata": {
         "id": "SV2GtLsAarek"
       },
-      "execution_count": 3,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -94,7 +100,7 @@
       "metadata": {
         "id": "hJuIimKHayqf"
       },
-      "execution_count": 5,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -195,9 +201,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RlPLOCIsaIa1",
-        "outputId": "c0853c20-7da6-4e7b-faef-18abcea3786c"
+        "outputId": "c18b964e-b938-4dd4-df64-9fed5dd21f37"
       },
-      "execution_count": 6,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -205,7 +211,7 @@
           "text": [
             "\n",
             "Variables dropped: ['id', 'member_id', 'Row ID', 'Unnamed: 50', 'annual_inc_joint', 'dti_joint', '36months', '60months', 'next_pymnt_d', 'mths_since_last_major_derog', 'title', 'grade', 'funded_amnt']\n",
-            "Cleaned DataFrame dimensions: (3674, 40)\n"
+            "Cleaned DataFrame dimensions: (212999, 40)\n"
           ]
         }
       ]
@@ -252,9 +258,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SFtg6470bjf_",
-        "outputId": "e0a4f716-f923-4632-9152-74ea1a848f50"
+        "outputId": "bb2ddb1f-4a7a-4587-c509-a38310a55f38"
       },
-      "execution_count": 7,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -298,21 +304,21 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jNGBwlE1gdRD",
-        "outputId": "abe82a12-ad5e-46f3-c462-06b8c9959646"
+        "outputId": "45f3521b-ab02-4f31-8d27-717d48796944"
       },
-      "execution_count": 8,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Target Counts:\n",
-            "0    3206\n",
-            "1     468\n",
+            "0    151709\n",
+            "1     61290\n",
             "\n",
             "Target Percentages:\n",
-            "0    87.26 %\n",
-            "1    12.74 %\n",
+            "0    71.23 %\n",
+            "1    28.77 %\n",
             "\n"
           ]
         }
@@ -366,9 +372,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NiCaMPTOC8-N",
-        "outputId": "254bd4a6-a494-4a60-b12a-13cc14a3d468"
+        "outputId": "44b8b032-b21c-42e8-8d71-13ab3cfa1797"
       },
-      "execution_count": 9,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -377,10 +383,21 @@
             "Desired amount ranges:\n",
             "\n",
             "loan_range\n",
-            "(5000, 7000]      0.170213\n",
-            "(7000, 9000]      0.162712\n",
-            "(9000, 11000]     0.155718\n",
-            "(19000, 21000]    0.151057\n",
+            "(1000, 3000]      0.182740\n",
+            "(3000, 5000]      0.283272\n",
+            "(5000, 7000]      0.347792\n",
+            "(7000, 9000]      0.349951\n",
+            "(9000, 11000]     0.334011\n",
+            "(11000, 13000]    0.294425\n",
+            "(13000, 15000]    0.296526\n",
+            "(15000, 17000]    0.270516\n",
+            "(17000, 19000]    0.262080\n",
+            "(19000, 21000]    0.287494\n",
+            "(21000, 23000]    0.217605\n",
+            "(23000, 25000]    0.322029\n",
+            "(25000, 27000]    0.241466\n",
+            "(27000, 29000]    0.395797\n",
+            "(29000, 31000]    0.173149\n",
             "Name: target_loan_risk, dtype: float64\n",
             "\n"
           ]
@@ -426,7 +443,6 @@
     {
       "cell_type": "code",
       "source": [
-        "# ---- 0) Precondition: df_cleaned exists and 'sub_grade' & 'target_loan_risk' present ----\n",
         "# Drop leakage\n",
         "df_model = df_cleaned.drop(columns=['sub_grade'], axis=1)\n",
         "\n",
@@ -438,7 +454,7 @@
         "num_features = X.select_dtypes(include=['number']).columns.tolist()\n",
         "cat_features = X.select_dtypes(include=['object','category']).columns.tolist()\n",
         "\n",
-        "# --- 1) Build preprocessing pipelines ---\n",
+        "# Build preprocessing pipelines\n",
         "numeric_pipeline = Pipeline([\n",
         "    ('imputer', SimpleImputer(strategy='median')),   # fill numeric NaNs\n",
         "    ('scaler', StandardScaler())                     # normalize -> mean=0, std=1\n",
@@ -457,24 +473,24 @@
         "    # preserve sparse output if many features are sparse; leave default sparse_threshold\n",
         ")\n",
         "\n",
-        "# --- 2) Full pipeline with RandomForest ---\n",
+        "# Full pipeline with RandomForest\n",
         "rf = RandomForestClassifier(random_state=42, n_jobs=-1)\n",
         "pipeline = Pipeline([\n",
         "    ('preproc', preprocessor),\n",
         "    ('clf', rf)\n",
         "])\n",
         "\n",
-        "# --- 3) Train/test split (stratify) ---\n",
+        "# Train/test split (stratify)\n",
         "X_train, X_test, y_train, y_test = train_test_split(\n",
         "    X, y, test_size=0.30, random_state=42, stratify=y\n",
         ")\n",
         "\n",
-        "# --- 4) GridSearch (light) on n_estimators ---\n",
+        "#  GridSearch (light) on n_estimators\n",
         "param_grid = {'clf__n_estimators': [50, 100]}  # keep small for Colab\n",
         "grid = GridSearchCV(pipeline, param_grid, cv=3, scoring='f1', n_jobs=-1, verbose=1)\n",
         "grid.fit(X_train, y_train)\n",
         "\n",
-        "# --- 5) Evaluate on test set ---\n",
+        "# Evaluate on test set\n",
         "y_pred = grid.predict(X_test)\n",
         "\n",
         "print(\"Best params:\", grid.best_params_)\n",
@@ -490,28 +506,20 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "C8Wsh-QkEZK0",
-        "outputId": "1667960b-355e-49cd-e005-980462bb24f3"
+        "outputId": "bb499db2-387b-45d8-d0e9-82eeb02071fb"
       },
-      "execution_count": 10,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Fitting 3 folds for each of 2 candidates, totalling 6 fits\n",
-            "Best params: {'clf__n_estimators': 50}\n",
-            "Accuracy :  0.937\n",
+            "Best params: {'clf__n_estimators': 100}\n",
+            "Accuracy :  0.995\n",
             "Precision:  1.0\n",
-            "Recall   :  0.504\n",
-            "F1-score :  0.67\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.12/dist-packages/sklearn/preprocessing/_encoders.py:246: UserWarning: Found unknown categories in columns [1, 8] during transform. These unknown categories will be encoded as all zeros\n",
-            "  warnings.warn(\n"
+            "Recall   :  0.984\n",
+            "F1-score :  0.992\n"
           ]
         }
       ]
