--- a/Tefas_Exercise_1.ipynb
+++ b/Tefas_Exercise_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNYbDLqwnUMGGYBWIEBnc+f",
+      "authorship_tag": "ABX9TyO0kDMnEat8m9CQxLpb2vCy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -60,16 +60,17 @@
         "\n",
         "        # Hyperparameter grid\n",
         "        self.param_grid = {\n",
-        "            \"C\": [0.1, 8, 50, 100],\n",
+        "            # \"C\": [0.1, 8, 50, 100],\n",
+        "            \"C\": [0.1, 1, 10],\n",
         "            # \"kernel\": [\"rbf\", \"poly\", \"linear\"],\n",
         "            # \"kernel\": [\"rbf\", \"linear\"],\n",
         "            # \"kernel\": [\"rbf\"],\n",
         "            \"kernel\": [\"linear\"],\n",
-        "            \"gamma\": [\"scale\", \"auto\"],\n",
+        "            # \"gamma\": [\"scale\", \"auto\"],\n",
         "            # \"gamma\": [\"auto\"],\n",
-        "            \"decision_function_shape\": [\"ovr\", \"ovo\"],\n",
+        "            # \"decision_function_shape\": [\"ovr\", \"ovo\"],\n",
         "            # \"decision_function_shape\": [\"ovr\"],\n",
-        "            # \"decision_function_shape\": [\"ovo\"],\n",
+        "            # \"decision_function_shape\": [\"ovr\"],\n",
         "        }\n",
         "        self.results = []\n",
         "        self.__model = []\n",
